--- a/kurs00.ipynb
+++ b/kurs00.ipynb
@@ -437,6 +437,72 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1, 2, 3],\n",
+       "        [4, 5, 6],\n",
+       "        [7, 8, 9]])"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t1[0,:,:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[[0.4165, 0.2878, 0.0654, 0.1194],\n",
+      "         [0.0141, 0.1633, 0.8199, 0.2999],\n",
+      "         [0.5224, 0.1621, 0.5002, 0.0857]]])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Random tensors\n",
+    "\n",
+    "random_tensor = torch.rand(1,3,4)\n",
+    "print(random_tensor)\n",
+    "random_tensor.ndim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#create a random tensor with shape like image\n",
+    "\n",
+    "random_image_size_tensor = torch.rand(size=(3,224,224))# chanels, width,height \n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
