--- a/kurs00.ipynb
+++ b/kurs00.ipynb
@@ -358,9 +358,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[1, 2, 3],\n",
+       "         [4, 5, 6],\n",
+       "         [7, 8, 9]],\n",
+       "\n",
+       "        [[3, 3, 3],\n",
+       "         [3, 3, 3],\n",
+       "         [3, 3, 3]],\n",
+       "\n",
+       "        [[0, 0, 0],\n",
+       "         [1, 1, 1],\n",
+       "         [1, 3, 5]]])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Dobra własna zabawa\n",
     "\n",
@@ -372,7 +393,8 @@
     "                     [3,3,3]],\n",
     "                     [[0,0,0],\n",
     "                      [1,1,1],\n",
-    "                      [1,3,5]]])"
+    "                      [1,3,5]]])\n",
+    "t1"
    ]
   },
   {
@@ -500,6 +522,304 @@
     "\n",
     "random_image_size_tensor = torch.rand(size=(3,224,224))# chanels, width,height \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0.]])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "zero = torch.zeros(3,4)\n",
+    "zero"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1., 1., 1., 1.],\n",
+       "        [1., 1., 1., 1.],\n",
+       "        [1., 1., 1., 1.]])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "one = torch.ones(3,4)\n",
+    "one"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.float32"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "one.dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([ 1,  2,  3,  4,  5,  6,  7,  8,  9, 10])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "oneToTen = torch.arange(start=1, end= 11, step=1)\n",
+    "oneToTen "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0, 0, 0, 0, 0, 0, 0, 0, 0, 0])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ten_zeroes = torch.zeros_like(input=oneToTen)\n",
+    "ten_zeroes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([3.5000, 6.2320, 9.1000])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "float_32_tensor = torch.tensor([3.5, 6.232, 9.1],dtype=None, device=None,requires_grad=False)\n",
+    "\n",
+    "float_32_tensor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.float16"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "float_32_tensor.dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([3., 6., 9.], dtype=torch.float16)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "float_16_tensor = float_32_tensor.type(torch.float16)\n",
+    "float_16_tensor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.float32"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mnoz = float_16_tensor * float_32_tensor\n",
+    "mnoz.dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([-9,  4, -4], dtype=torch.int16)\n"
+     ]
+    }
+   ],
+   "source": [
+    "uint = torch.tensor([3,2,1],dtype=torch.uint8)\n",
+    "integer = torch.tensor([-3,2,-4], dtype=torch.int8)\n",
+    "dziwneMnozenie = uint * integer\n",
+    "print(dziwneMnozenie)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.float32"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "int_32_tensor = torch.tensor([3,5,9],dtype=torch.int32)\n",
+    "mno = int_32_tensor*float_32_tensor\n",
+    "mno.dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.1292, 0.0737, 0.1682, 0.9131],\n",
+       "        [0.5993, 0.5442, 0.1482, 0.2216],\n",
+       "        [0.9656, 0.7144, 0.3378, 0.1511]])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "tension = torch.rand(3,4)\n",
+    "tension"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.1292, 0.0737, 0.1682, 0.9131],\n",
+      "        [0.5993, 0.5442, 0.1482, 0.2216],\n",
+      "        [0.9656, 0.7144, 0.3378, 0.1511]])\n",
+      "Datatype: torch.float32\n",
+      "Shape: torch.Size([3, 4])\n",
+      "Device: cpu\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(tension)\n",
+    "print(f\"Datatype: {tension.dtype}\")\n",
+    "print(f\"Shape: {tension.shape}\")\n",
+    "print(f\"Device: {tension.device}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
