--- a/kurs00.ipynb
+++ b/kurs00.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -1061,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1078,7 +1078,7 @@
    "source": [
     "#Finding min, max, mean, sum, etc\n",
     "\n",
-    "x = torch.arange(0,100, 10)\n",
+    "x = torch.arange(0, 100, 10)\n",
     "x "
    ]
   },
@@ -1192,12 +1192,10 @@
     {
      "data": {
       "text/plain": [
-       "torch.return_types.max(\n",
-       "values=tensor(90),\n",
-       "indices=tensor(9))"
+       "tensor(0)"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1206,7 +1204,8 @@
     "#Dodatkowo zwracany indeks\n",
     "torch.min(x,0)\n",
     "torch.max(x,0)\n",
-    "x.min(0)"
+    "x.min(0)\n",
+    "x.argmin()\n"
    ]
   },
   {
@@ -1229,6 +1228,241 @@
    ],
    "source": [
     "x.median(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(9)"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x.argmax()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 1.3564, -1.3590,  0.6747],\n",
+       "        [-0.8218, -0.8366,  0.3166],\n",
+       "        [-0.0399, -0.5045,  0.0805]])"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x2 = torch.randn(3,3)\n",
+    "x2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.return_types.min(\n",
+       "values=tensor([-1.3590, -0.8366, -0.5045]),\n",
+       "indices=tensor([1, 1, 1]))"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x2.min(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([1., 2., 3., 4., 5., 6., 7., 8., 9.])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Zmiana wymiarów macierzy jak rozumiem\n",
+    "x = torch.arange(1., 10.)\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1., 2., 3., 4., 5., 6., 7., 8., 9.]])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_reshaped = x.reshape(1,9)\n",
+    "x_reshaped"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[5., 2., 3., 5., 5., 6., 5., 8., 9.]])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "z = x.view(1,9)\n",
+    "z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Zmiana z zmienia x\n",
+    "z[:,0] = 5\n",
+    "z, x\n",
+    "x2 = x + 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([ 5.,  2.,  3.,  5.,  5.,  6.,  5.,  8.,  9., 15., 12., 13., 15., 15.,\n",
+       "         16., 15., 18., 19., 15., 12., 13., 15., 15., 16., 15., 18., 19.,  5.,\n",
+       "          2.,  3.,  5.,  5.,  6.,  5.,  8.,  9.]),\n",
+       " 1)"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_stacked = torch.hstack([x,x2,x2,x])\n",
+    "x_stacked, x_stacked.ndim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[[0.2844, 0.8987, 0.1150],\n",
+       "          [0.8367, 0.8207, 0.1373]]]])"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x3 = torch.rand(1,1,2,3)\n",
+    "x3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.2844, 0.8987, 0.1150],\n",
+       "        [0.8367, 0.8207, 0.1373]])"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scisniete = x3.squeeze(0,1)\n",
+    "scisniete"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[0.2844],\n",
+       "         [0.8987],\n",
+       "         [0.1150]],\n",
+       "\n",
+       "        [[0.8367],\n",
+       "         [0.8207],\n",
+       "         [0.1373]]])"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scisniete.unsqueeze(dim = 2)\n"
    ]
   },
   {
